--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^16.0.1",
+    "@types/mdx": "^2.0.13",
     "dedent": "^1.7.0",
     "next": "16.0.1",
+    "next-mdx-remote": "^5.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
